# eodi-me

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.engine  Makefile  README.en.md  README.md  SECURITY.md  docker-compose.engine.yml  docker-compose.yml  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  db-release.yml  gh-pages.yml  release.yml
config/: Caddyfile  prometheus.yml
config/grafana/dashboards/: dashboards.yml  eodi-overview.json
docs/: CODE_QUALITY.md  COLLECTOR_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  MAKEFILE_GUIDE.md  PRODUCTION_CHECKLIST.md  SECURITY_AND_DEPLOYMENT.md  SECURITY_GUIDELINES.md  TEST_RESULTS.md  UI_UX_BENCHMARK.md  api-guide.md  byod-schema.md  openapi.yaml
docs/architecture/: City Vibe Engine_ 시스템 아키텍처 및 비즈니스 로직 명세서.md  City Vibe Engine_ 프론트엔드 디자인 및 기술 명세 요약.md  City Vibe Engine_ 프론트엔드 및 인터랙션 코드 명세서.md  City Vibe Engine_ 핵심 엔진 및 보안 구현 명세서.md  DATASET_VECTOR_SPEC.md
docs/design/: CHANGES_SUMMARY.md  COLOR_MIGRATION_REFERENCE.txt  COLOR_PALETTE_REFERENCE.md  PREMIUM_UI_UPDATES.md  QUICK_REFERENCE_CARD.md  README_PREMIUM_UI_UPDATE.md
engine-server/: Cargo.toml
engine-server/src/: crypto.rs  main.rs  math.rs  models.rs  overlay.rs  search.rs
go-api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  build.ps1  go.mod  package-lock.json  package.json
go-api/cmd/server/: main.go  window_other.go  window_windows.go
go-api/engine/: embed.go  embed_engine.go  embed_stub.go
go-api/frontend/: embed.go  embed_frontend.go  embed_stub.go
go-api/internal/config/: config.go
go-api/internal/database/: health.go  sqlite.go
go-api/internal/docs/: docs.go
go-api/internal/enginemgr/: hide_other.go  hide_windows.go  job_other.go  job_windows.go  manager.go  proxy.go
go-api/internal/handlers/: admin.go  cities.go  geocode.go  health.go  hexagons.go  match.go  stats.go
go-api/internal/metrics/: metrics.go
go-api/internal/middleware/: auth.go  bodylimit.go  cors.go  logger.go  prometheus.go  ratelimit.go  requestid.go  security.go  timeout.go
go-api/internal/models/: city.go  match.go
go-api/internal/router/: router.go
go-api/internal/utils/: vector.go
go-api/scripts/: create-indexes.sql
go-api/tests/: benchmark_test.go  handlers_test.go  integration_test.go  middleware_test.go
go-api/window/: embed.go  embed_stub.go  embed_window.go
landing/: download.html  index.html  privacy.html  robots.txt  sitemap.xml  terms.html
landing/ko/: index.html
monitoring/: alertmanager.yml
monitoring/alerts/: api_alerts.yml
monitoring/grafana/: dashboard.json
rust-collector/: .gitignore  ADAPTIVE_SYSTEM.md  Cargo.toml  FREE_APIS.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_IMPROVEMENTS.md  README.md  USAGE.md  VECTOR_DATABASE.md  check_db.py  check_root_db.py  config.example.toml  recollect_top_cities.py  restore_missing_hexagons.py
rust-collector/scripts/: check_climate_schema.py  check_db.py  check_output.py  enable-fast-download.ps1
rust-collector/src/: adaptive.rs  boundary.rs  city.rs  cli.rs  collector.rs  config.rs  hexagon.rs  lib.rs  main.rs  metrics.rs  normalizer.rs  pbf.rs  poi.rs  ratelimit.rs  resources.rs  robots.rs  stages.rs  vectordb.rs
rust-collector/src/commands/: build_full.rs  collect_cities.rs  collect_hexagons.rs  collect_poi.rs  download_boundaries.rs  init.rs  misc.rs  mod.rs  update.rs  vdb.rs
rust-collector/src/database/: boundaries.rs  cities.rs  hexagons.rs  maintenance.rs  mod.rs  schema.rs
rust-collector/src/pipeline/: auto.rs  cities.rs  mod.rs  vdb.rs
scripts/: README.md  backfill_missing_poi.py  capture_ui.mjs  download-cities-data.ps1  duckdb_to_sqlite.py  generate-updater-key.ps1  init-db.sql  monitor-hexagons.ps1  pw_screenshot.mjs  run-hexagon-pipeline.ps1  run-pipeline.ps1  smoke_release.ps1  ui_smoke.ps1  upload-db-release.ps1
scripts/github-setup/: app-repo-README.md  landing-deploy.yml  release-to-public.yml
supabase/: schema.sql
supabase/functions/lemon-webhook/: index.ts
supabase/functions/send-license-email/: index.ts
tauri-shell/: .env.development  README.md  index.html  package-lock.json  package.json  playwright-capture.cjs  tailwind.config.js  vite.config.js
tauri-shell/src/: App.tsx  ErrorBoundary.jsx  global.d.ts  index.css
tauri-shell/src-tauri/: Cargo.toml  tauri.conf.json
tauri-shell/src-tauri/icons/: icon.icns
tauri-shell/src-tauri/src/: commands.rs  engine.rs  license.rs  main.rs  menu.rs
tauri-shell/src/hooks/: useCountries.ts  useEngine.ts  (+5 more)
tests/http_root/: index.html  robots.txt
window-host/: Cargo.toml
window-host/src/: main.rs
(+28 files in other folders)
