[package]
name = "eodi-engine-server"
version = "0.1.0"
edition = "2021"
authors = ["EODI.ME Team"]
description = "Encrypted vector database engine server — decrypts .edb files and serves internal API"

[[bin]]
name = "eodi-engine"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Cryptography (AES-256-GCM for .edb decryption)
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Parallel processing
rayon = "1.8"

# Unicode normalization (accent-insensitive search)
unicode-normalization = "0.1"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
