[package]
name = "eodi-collector"
version = "1.0.0"
edition = "2021"
authors = ["EODI.ME"]
description = "High-performance data collector for City Vibe Engine"
license = "Proprietary"

[[bin]]
name = "eodi-collector"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream"] }
url = "2.5"
futures-util = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# System monitoring
sysinfo = "0.30"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
rand = "0.8"
parking_lot = "0.12"  # Fast synchronization primitives
ahash = "0.8"  # Fast hashing algorithm

# Database
# DuckDB: columnar embedded DB — handles 10M+ hexagon rows efficiently.
# Columnar storage = fast full-scans for VDB build, ~4x better compression than SQLite.
# 'bundled' compiles DuckDB from source (one-time ~5min compile, no system dep needed).
duckdb = { version = "1.1", features = ["bundled"] }

# Performance
mimalloc = "0.1"  # Fast memory allocator
rayon = "1.8"  # Data parallelism

# Cryptography (for encrypted vector DB)
aes-gcm = "0.10"         # AES-256-GCM authenticated encryption
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory clearing
bincode = "1.3"          # Fast binary serialization for payload
httpdate = "1"           # HTTP-date header parsing (Last-Modified freshness check)

# Progress UI
indicatif = "0.17"

# H3 hexagonal grid (pure Rust, no C bindings)
h3o = "0.6"

# OSM PBF file reader (Stage 2 local file fallback — no API rate limits)
osmpbf = "0.3"

# Geometry / spatial (for Max Areal Overlap admin boundary assignment)
geo = "0.28"
geo-types = "0.7"
rstar = "0.12"          # R-tree spatial index for fast polygon lookup

[dev-dependencies]
# Keep empty - production tool only

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
